@@ -100,3 +100,5 @@
 - Automatically fills some fields in the survey (Rev 217)
 - When a query fails, shows the message of the exception (Rev220)
 - Improved tokenizer for select in optimizations, now can accept operators in identifiers (Rev220)
+- Uses getopt to handle the command line in a more standard way
+- Organized code so the ui can be either qt or curses
